[gd_scene load_steps=16 format=3 uid="uid://b67p4o108lnqn"]

[ext_resource type="Script" path="res://nanogames/woozy_chomper/woozy/woozy.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dyli1ewihwmha" path="res://nanogames/woozy_chomper/woozy/segment/segment.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dbblyf0llcbdu" path="res://nanogames/woozy_chomper/woozy/_assets/woozy.png" id="3"]
[ext_resource type="Texture2D" uid="uid://jmhlyvmqn0in" path="res://nanogames/woozy_chomper/woozy/_assets/saliva.png" id="4"]
[ext_resource type="AudioStream" uid="uid://dtkyxi5gr8vwp" path="res://nanogames/woozy_chomper/woozy/_assets/die.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dwovf5xerc5tw" path="res://nanogames/woozy_chomper/woozy/_assets/eat.wav" id="6_3jd1a"]

[sub_resource type="Gradient" id="Gradient_v5vjg"]
offsets = PackedFloat32Array(0.8, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mbc8a"]
gradient = SubResource("Gradient_v5vjg")
width = 32

[sub_resource type="ParticleProcessMaterial" id="3"]
particle_flag_disable_z = true
angle_max = 360.0
direction = Vector3(0, 1, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_mbc8a")

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(56, 56)

[sub_resource type="Animation" id="8"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/MandibleLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [270.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/MandibleLeft:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/MandibleRight:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [270.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/MandibleRight:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/EyeLeft:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head/EyeLeft:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head/EyeRight:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Head/EyeRight:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="5"]
length = 1.3
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/MandibleLeft:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [4.29351]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/MandibleLeft:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/MandibleRight:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [5.13127]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/MandibleRight:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/EyeLeft:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head/EyeLeft:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head/EyeRight:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Head/EyeRight:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Noises")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6")
}],
"times": PackedFloat32Array(0)
}
tracks/8/use_blend = true

[sub_resource type="Animation" id="6"]
length = 0.9
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/MandibleLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.4, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 2,
"values": [228.0, 270.0, 238.0, 270.0, 254.0, 270.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/MandibleLeft:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.4, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.2, 1.0, 1.2, 1.0, 1.2, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/MandibleRight:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.4, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 2,
"values": [312.0, 270.0, 302.0, 270.0, 286.0, 270.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/MandibleRight:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.4, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.2, 1.0, 1.2, 1.0, 1.2, 1.0]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Noises")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_3jd1a")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="7"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/MandibleLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [270.0, 262.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/MandibleRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [270.0, 278.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yftfc"]
_data = {
"RESET": SubResource("8"),
"die": SubResource("5"),
"eat": SubResource("6"),
"idle": SubResource("7")
}

[node name="Woozy" type="Area2D"]
z_index = 1
input_pickable = false
script = ExtResource("1")

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("3")
region_enabled = true
region_rect = Rect2(128, 0, 152, 128)

[node name="MandibleLeft" type="Sprite2D" parent="Head"]
show_behind_parent = true
position = Vector2(-20, -16)
rotation = 4.71239
texture = ExtResource("3")
offset = Vector2(48, 0)
region_enabled = true
region_rect = Rect2(144, 128, 120, 72)

[node name="MandibleRight" type="Sprite2D" parent="Head"]
show_behind_parent = true
position = Vector2(20, -16)
rotation = 4.71239
texture = ExtResource("3")
offset = Vector2(48, 0)
flip_v = true
region_enabled = true
region_rect = Rect2(144, 128, 120, 72)

[node name="EyeLeft" type="Sprite2D" parent="Head"]
show_behind_parent = true
position = Vector2(-48, 0)
texture = ExtResource("3")
hframes = 2
region_enabled = true
region_rect = Rect2(8, 128, 128, 64)

[node name="EyeRight" type="Sprite2D" parent="Head"]
show_behind_parent = true
position = Vector2(48, 0)
texture = ExtResource("3")
flip_h = true
hframes = 2
region_enabled = true
region_rect = Rect2(8, 128, 128, 64)

[node name="Saliva" type="GPUParticles2D" parent="."]
position = Vector2(0, -64)
emitting = false
amount = 32
process_material = SubResource("3")
texture = ExtResource("4")
lifetime = 0.8
one_shot = true
visibility_rect = Rect2(-300, -250, 600, 600)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -72)
shape = SubResource("4")

[node name="Segments" type="Node" parent="."]

[node name="Segment" parent="Segments" instance=ExtResource("2")]

[node name="Segment2" parent="Segments" instance=ExtResource("2")]

[node name="Segment3" parent="Segments" instance=ExtResource("2")]

[node name="Segment4" parent="Segments" instance=ExtResource("2")]

[node name="Noises" type="AudioStreamPlayer2D" parent="."]
volume_db = 2.0
bus = &"Effects"

[node name="SegmentsUpdate" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="EyesAnimate" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yftfc")
}
autoplay = "idle"

[connection signal="timeout" from="SegmentsUpdate" to="." method="_on_segments_update_timeout"]
[connection signal="timeout" from="EyesAnimate" to="." method="_on_eyes_animate_timeout"]
